[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Scenes/Main scenes/3/1/Scene.gd" type="Script" id=1]
[ext_resource path="res://assets/Scenes/Main scenes/3/1/Dialog.gd" type="Script" id=2]
[ext_resource path="res://assets/Scenes/Main scenes/0/Verdana24.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/Scenes/Backgrounds/17.png" type="Texture" id=5]
[ext_resource path="res://assets/GUI/GUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/Scenes/Main scenes/0/ParallaxBackground.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/Scenes/Main scenes/0/ChoiceButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/GUI/Labels.tscn" type="PackedScene" id=9]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0.0820313, 0.0820313, 0.0820313, 1, 0.269531, 0.269531, 0.269531, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" groups=[
"saved",
]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labels" parent="." instance=ExtResource( 9 )]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer3"]
margin_right = 1920.0
margin_bottom = 416.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ChoiceButtons" type="VBoxContainer" parent="VBoxContainer3"]
margin_top = 628.0
margin_right = 1920.0
margin_bottom = 628.0
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="ChoiceSteal" type="VBoxContainer" parent="VBoxContainer3/ChoiceButtons"]
visible = false
margin_right = 1280.0
margin_bottom = 110.0
size_flags_vertical = 4

[node name="TextureButton6" parent="VBoxContainer3/ChoiceButtons/ChoiceSteal" instance=ExtResource( 8 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 1280.0
margin_bottom = 34.0
size_flags_horizontal = 3
choice = "no"
button_text = "[center]But I'm not a bandit![/center]"

[node name="TextureButton7" parent="VBoxContainer3/ChoiceButtons/ChoiceSteal" instance=ExtResource( 8 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 38.0
margin_right = 1280.0
margin_bottom = 72.0
size_flags_horizontal = 3
choice = "village_steal_wallet"
button_text = "[center]Maybe I can get someoneâ€™s wallet?[/center]"

[node name="TextureButton9" parent="VBoxContainer3/ChoiceButtons/ChoiceSteal" instance=ExtResource( 8 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 76.0
margin_right = 1280.0
margin_bottom = 110.0
size_flags_horizontal = 3
choice = "accomplice"
button_text = "[center]Hmm, how about something, what can bring a lot of gold?[/center]"

[node name="Choice" type="VBoxContainer" parent="VBoxContainer3/ChoiceButtons"]
visible = false
margin_right = 1280.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( -209.205, -198.836 )

[node name="TextureButton3" parent="VBoxContainer3/ChoiceButtons/Choice" instance=ExtResource( 8 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 1280.0
margin_bottom = 34.0
size_flags_horizontal = 3
choice = "village_steal"
button_text = "[center]People living here look kinda prosperous...  You want their gold![/center]"

[node name="TextureButton4" parent="VBoxContainer3/ChoiceButtons/Choice" instance=ExtResource( 8 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 38.0
margin_right = 1280.0
margin_bottom = 72.0
size_flags_horizontal = 3
choice = "village_tavern_hungry"
button_text = "[center]You are hungry.. Go to the tavern[/center]"

[node name="TextureButton5" parent="VBoxContainer3/ChoiceButtons/Choice" instance=ExtResource( 8 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 76.0
margin_right = 1280.0
margin_bottom = 110.0
size_flags_horizontal = 3
choice = "village_work"
button_text = "[center]Find work[/center]"

[node name="TextureButton6" parent="VBoxContainer3/ChoiceButtons/Choice" instance=ExtResource( 8 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 76.0
margin_right = 1280.0
margin_bottom = 110.0
size_flags_horizontal = 3
choice = "village_tavern_beer"
button_text = "[center]You've already spent days here... You decide to go to the tavern and get a mug of beer...[/center]"

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer3"]
margin_top = 840.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 0, 240 )
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 1.01

[node name="Control" type="Control" parent="VBoxContainer3/VBoxContainer4"]
margin_right = 1920.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBox" type="Control" parent="VBoxContainer3/VBoxContainer4/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1.52588e-05
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer3/VBoxContainer4/Control/DialogBox"]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -120.0
margin_right = 960.0
margin_bottom = 120.0
rect_min_size = Vector2( 1280, 240 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer3/VBoxContainer4/Control/DialogBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -50.0
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="VBoxContainer3/VBoxContainer4/Control/DialogBox"]

[node name="GUI" parent="VBoxContainer3/VBoxContainer4/Control" instance=ExtResource( 6 )]

[node name="ParallaxBackground" parent="." instance=ExtResource( 7 )]

[node name="TextureRect" parent="ParallaxBackground" index="0"]
texture = ExtResource( 5 )

[editable path="ParallaxBackground"]
